# cli-tools

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  common.hpp
src/grep/: main.cpp
src/tree/: main.cpp
src/wc/: main.cpp
tests/: CMakeLists.txt  test_common.cpp
